--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -40,6 +40,19 @@ main section.categories-show {
         transition: all 0.3s;
       }
 
+      aside.sold-out-badge {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: lightcoral;
+        color: whitesmoke;
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+        font-weight: bold;
+      }
+
       aside.price {
         position: absolute;
         top: 0;
