--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,13 +7,14 @@
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
-  
 
-    <% # raise @order.inspect %>
-    <% render 'order' %>
+  <%= render 'order' %>
 
+  <div class="order-email" style="padding-bottom: 10px; font-weight: bold;">
+    E-mail for this order: 
+    <%= @order.email %>
+  </div>
 
-  <% # raise @line_items.inspect %>
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
 </section>
