--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -41,7 +41,31 @@
             <li><%= link_to 'Products',  [:admin, :products] %></li>
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
+
+        <!-- User Section -->
+        <% if current_user %>
+        <li>
+          <p style="padding: 15px 10px">Signed in as <%= current_user.name %></p>
         </li>
+        <li>
+          <p style="padding-top: 15px">|</p>
+        </li>
+        <li>
+          <%= link_to "Logout", '/logout' %>
+        </li>
+        <% else %>
+        <li>
+          <%= link_to 'Login', '/login' %> 
+        </li>
+        <li>
+          <p style="padding-top: 15px">|</p>
+        </li>
+        <li>
+          <%= link_to 'Signup', '/signup' %>
+        </li>
+        <% end %>
+        <!-- / User Section -->
+
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
