Implement sales status and active sale info section

--- a/app/views/admin/sales/_sale.html.erb
+++ b/app/views/admin/sales/_sale.html.erb
@@ -9,9 +9,23 @@
     <%= sale.ends_on %>
   </td>
   <td>
-    unknown
+
+    <% if sale.finished? %>
+      <span class="label label-danger">Finished</span>
+    <% elsif sale.upcoming? %>
+      <span class="label label-warning">Upcoming</span>
+    <% elsif sale.active? %>
+      <span class="label label-success">Active</span>
+    <% end %>
+    
   </td>
   <td>
-    <%= sale.percent_off %>%
+    <%= sale.percent_off %> %
   </td>
 </tr>
+
+<!--
+sale = Sale.create! name: 'Sample Finished', starts_on: 30.days.ago, ends_on: 15.days.ago, percent_off: 10
+sale = Sale.create! name: 'Sample Upcoming', starts_on: 10.days.from_now, ends_on: 15.days.from_now, percent_off: 10
+sale = Sale.create! name: 'Sample Active', starts_on: 5.days.ago, ends_on: 5.days.from_now, percent_off: 10
+-->
